fix header logo and alignment

--- a/AUCCstylesheet.css
+++ b/AUCCstylesheet.css
@@ -1,14 +1,22 @@
 header {
 	background-color: rgba(0, 0, 0, 0.5);
-	text-align: center;
+	text-align: left;
 	color: white;
 	height: 120px;
 	font-family: "Ubuntu Condensed", sans-serif;
 	font-weight: 400;
-	font-size: 90px;
 }
+
+header h1 {
+	font-size: 50px;
+}
+
+header p {
+	text-align: center;
+}
+
 .logo {
-	padding-top: 0;
+
 }
 
 body {
